# ft_printf

./: CMakeLists.txt  Makefile  README.md  a.out  buf_manager.c  check_init_specification.c  check_init_specification2.c  flag_manager.c  ft_print_list.c  ft_printf.c  ft_strcat.c  ft_ulltoa.c  is_spec_elem.c  libft.h  libftprintf.h  lltoa_buf.c  main.c  prntf_chrstr.c  prntf_numb.c  prntf_unicode.c  prntf_unicode2.c  test  u_lltoa_base_buf.c  ulltoa_base_buf.c
Libft/: Makefile  ft_chrjoin_free.c  ft_itoa_base.c  ft_itoa_base_ll.c  ft_itoa_base_ull.c  ft_itoa_longlong.c  ft_itoa_ulonglong.c  ft_llitoa.c  ft_strjoin_free.c  libft.h  main.c
ft_printf/: buf_manager.c  check_color.c  check_init_specification.c  check_init_specification2.c  ft_printf.c  libftprintf.h  lltoa_buf.c  prntf_chrstr.c  prntf_numb.c  prntf_unicode.c  prntf_unicode2.c  ulltoa_base_buf.c
