cmake_minimum_required(VERSION 3.9)
project(ft_printf)

set(CMAKE_CXX_STANDARD 11)

add_executable(ft_printf
        ft_arriter.c
        ft_atoi.c
        ft_bzero.c
        ft_chrjoin_free.c
        ft_isalnum.c
        ft_isalpha.c
        ft_isascii.c
        ft_isdigit.c
        ft_isprint.c
        ft_itoa.c
        ft_itoa_base.c
        ft_llitoa.c
        ft_llitoa_base.c
        ft_lstadd.c
        ft_lstdel.c
        ft_lstdelcont.c
        ft_lstdelone.c
        ft_lstiter.c
        ft_lstmap.c
        ft_lstnew.c
        ft_memalloc.c
        ft_memccpy.c
        ft_memchr.c
        ft_memcmp.c
        ft_memcpy.c
        ft_memdel.c
        ft_memmove.c
        ft_memset.c
        ft_print_list.c
        ft_putchar.c
        ft_putchar_fd.c
        ft_putendl.c
        ft_putendl_fd.c
        ft_putnbr.c
        ft_putnbr_fd.c
        ft_putstr.c
        ft_putstr_fd.c
        ft_strcat.c
        ft_strchr.c
        ft_strclr.c
        ft_strcmp.c
        ft_strcpy.c
        ft_strdel.c
        ft_strdup.c
        ft_strequ.c
        ft_striter.c
        ft_striteri.c
        ft_strjoin.c
        ft_strjoin_free.c
        ft_strlcat.c
        ft_strlen.c
        ft_strmap.c
        ft_strmapi.c
        ft_strncat.c
        ft_strncmp.c
        ft_strncpy.c
        ft_strnequ.c
        ft_strnew.c
        ft_strnstr.c
        ft_strrchr.c
        ft_strrev.c
        ft_strsplit.c
        ft_strstr.c
        ft_strsub.c
        ft_strtrim.c
        ft_tolower.c
        ft_toupper.c
        ft_ullitoa_base.c
        ft_ulltoa.c
        get_next_line.c
        libft.h
        ft_printf/buf_manager.c
        ft_printf/check_init_specification.c
        ft_printf/check_init_specification2.c
        ft_printf/flag_manager.c
        ft_printf/ft_printf.c
        ft_printf/is_spec_elem.c
        ft_printf/libftprintf.h
        ft_printf/lltoa_buf.c
        main.c
        ft_printf/prntf_chrstr.c
        ft_printf/prntf_numb.c
        ft_printf/prntf_unicode.c
        ft_printf/prntf_unicode2.c
        ft_printf/ulltoa_base_buf.c
        ft_printf/check_color.c)
